fix: column padding

--- a/views/historial_ventas.html
+++ b/views/historial_ventas.html
@@ -31,11 +31,11 @@
         <tr>
           <th class="myTh text-left" data-i18n="sales.history.invoiceNumber">📄 Nº Factura</th>
           <th class="myTh text-left" data-i18n="sales.history.customer">👤 Cliente</th>
-          <th class="myTh text-left" data-i18n="sales.history.subtotal">💰 Subtotal</th>
-          <th class="myTh text-left" data-i18n="sales.history.taxes">📊 Impuestos</th>
-          <th class="myTh text-left" data-i18n="sales.history.discount">🏷️ Descuento</th>
-          <th class="myTh text-left" data-i18n="sales.history.total">💵 Total</th>
-          <th class="myTh text-left" data-i18n="sales.history.date">📅 Fecha</th>
+          <th class="myTh text-right" data-i18n="sales.history.subtotal">💰 Subtotal</th>
+          <th class="myTh text-right" data-i18n="sales.history.taxes">📊 Impuestos</th>
+          <th class="myTh text-right" data-i18n="sales.history.discount">🏷️ Descuento</th>
+          <th class="myTh text-right" data-i18n="sales.history.total">💵 Total</th>
+          <th class="myTh text-center" data-i18n="sales.history.date">📅 Fecha</th>
           <th class="myTh text-center" data-i18n="sales.history.details">👁️ Detalles</th>
           <th class="myTh text-center" data-i18n="sales.history.invoice">📥 Factura</th>
         </tr>
