--- a/views/nueva_venta.html
+++ b/views/nueva_venta.html
@@ -8,6 +8,14 @@
     <input id="buscarInput" type="text" placeholder="Ej: P-001 o 'Cable HDMI'" autocomplete="off"
       class="w-full border-2 border-indigo-300 p-3 rounded-lg focus:border-indigo-600 focus:ring-2 focus:ring-indigo-200 outline-none transition">
 
+    <div class="mt-3">
+      <label class="block font-bold text-gray-700 mb-2" data-i18n="sales.new.brandFilter">Marca</label>
+      <select id="filtroMarcaVenta"
+        class="w-full border-2 border-indigo-300 p-2 rounded-lg focus:border-indigo-600 focus:ring-2 focus:ring-indigo-200 outline-none transition">
+        <option value="" data-i18n="sales.new.brandAll">Todas las marcas</option>
+      </select>
+    </div>
+
     <!-- Dropdown de autocompletado -->
     <div id="autocompleteDropdown"
       class="absolute left-5 right-5 bg-white border-2 border-indigo-300 rounded-lg shadow-2xl mt-1 max-h-80 overflow-y-auto z-50 hidden">
@@ -33,6 +41,7 @@
             <th class="py-3 px-4 text-center" data-i18n="sales.new.table.image">Imagen</th>
             <th class="py-3 px-4 text-left" data-i18n="sales.new.table.nroParte">Nro de Parte</th>
             <th class="py-3 px-4 text-left" data-i18n="sales.new.table.description">Descripción</th>
+            <th class="py-3 px-4 text-left" data-i18n="sales.new.table.brand">Marca</th>
             <th class="py-3 px-4 text-right" data-i18n="sales.new.table.quantity">Cantidad</th>
             <th class="py-3 px-4 text-right" data-i18n="sales.new.table.iva">IVA</th>
             <th class="py-3 px-4 text-right" data-i18n="sales.new.table.unitPrice">Precio Unit.</th>
