min stock implemented

--- a/views/listar_productos.html
+++ b/views/listar_productos.html
@@ -42,6 +42,7 @@
           <th class="py-3 px-4 text-left" data-i18n="products.list.description">Descripción</th>
           <th class="py-3 px-4 text-left" data-i18n="products.list.brand">Marca</th>
           <th class="py-3 px-4 text-left" data-i18n="products.list.location">Ubicación</th>
+          <th class="py-3 px-4 text-right" data-i18n="products.list.stockMin">Stock mínimo</th>
           <th class="py-3 px-4 text-right sortable" data-field="Cantidad" data-i18n="products.list.quantity">Cantidad
           </th>
           <th class="py-3 px-4 text-right sortable" data-field="Precio" data-i18n="products.list.priceVenta">Precio
