invoice date fixed

--- a/views/nueva_venta.html
+++ b/views/nueva_venta.html
@@ -42,6 +42,7 @@
             <th class="py-3 px-4 text-left" data-i18n="sales.new.table.nroParte">Nro de Parte</th>
             <th class="py-3 px-4 text-left" data-i18n="sales.new.table.description">Descripción</th>
             <th class="py-3 px-4 text-left" data-i18n="sales.new.table.brand">Marca</th>
+            <th class="py-3 px-4 text-left" data-i18n="sales.new.table.location">Ubicación</th>
             <th class="py-3 px-4 text-right" data-i18n="sales.new.table.quantity">Cantidad</th>
             <th class="py-3 px-4 text-right" data-i18n="sales.new.table.iva">IVA</th>
             <th class="py-3 px-4 text-right" data-i18n="sales.new.table.unitPrice">Precio Unit.</th>
