--- a/views/nueva_venta.html
+++ b/views/nueva_venta.html
@@ -181,7 +181,7 @@
           <span class="text-green-600 text-sm font-normal">(Generado automáticamente)</span></label>
         <input id="numeroFactura" type="text" readonly placeholder="Se generará automáticamente..."
           class="w-full border-2 border-gray-300 p-3 rounded-lg bg-gray-50 text-gray-700 font-semibold cursor-not-allowed">
-        <p class="text-xs text-gray-500 mt-1">📋 Formato: FAC-YYYYMMDD-####</p>
+        <p class="text-xs text-gray-500 mt-1">📋 Formato: INV-MMDDYYYY-####</p>
       </div>
 
       <div class="md:col-span-2">
