new payment method implemented

--- a/views/historial_ventas.html
+++ b/views/historial_ventas.html
@@ -17,10 +17,13 @@
     <select id="filtroMetodo"
       class="border border-indigo-900 px-4 py-2 rounded-lg w-full shadow-sm focus:ring-2 focus:ring-indigo-500 focus:outline-none">
       <option value="" data-i18n="sales.history.filterByMethod">🏦 Filtrar por método de pago</option>
+      <option value="zelle" data-i18n="sales.new.invoice.zelle">Zelle</option>
+      <option value="cash_app" data-i18n="sales.new.invoice.cashApp">Cash app</option>
+      <option value="paypal" data-i18n="sales.new.invoice.paypal">Pay pal</option>
+      <option value="credit_card" data-i18n="sales.new.invoice.creditCard">Credit card</option>
+      <option value="debit_card" data-i18n="sales.new.invoice.debitCard">Debit card</option>
       <option value="efectivo" data-i18n="sales.new.invoice.cash">💵 Efectivo</option>
-      <option value="tarjeta" data-i18n="sales.new.invoice.card">💳 Tarjeta</option>
       <option value="transferencia" data-i18n="sales.new.invoice.transfer">🏧 Transferencia</option>
-      <option value="bizum" data-i18n="sales.new.invoice.bizum">📱 Bizum</option>
     </select>
   </div>
 
