--- a/views/nueva_venta.html
+++ b/views/nueva_venta.html
@@ -169,10 +169,13 @@
           Pago</label>
         <select id="metodoPago"
           class="w-full border-2 border-indigo-300 p-3 rounded-lg focus:border-indigo-600 focus:ring-2 focus:ring-indigo-200 outline-none transition">
+          <option value="zelle" data-i18n="sales.new.invoice.zelle">Zelle</option>
+          <option value="cash_app" data-i18n="sales.new.invoice.cashApp">Cash app</option>
+          <option value="paypal" data-i18n="sales.new.invoice.paypal">Pay pal</option>
+          <option value="credit_card" data-i18n="sales.new.invoice.creditCard">Credit card</option>
+          <option value="debit_card" data-i18n="sales.new.invoice.debitCard">Debit card</option>
           <option value="efectivo" data-i18n="sales.new.invoice.cash">💵 Efectivo</option>
-          <option value="tarjeta" data-i18n="sales.new.invoice.card">💳 Tarjeta</option>
           <option value="transferencia" data-i18n="sales.new.invoice.transfer">🏦 Transferencia</option>
-          <option value="bizum" data-i18n="sales.new.invoice.bizum">📱 Bizum</option>
         </select>
       </div>
 
